infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: splits-network
  labels:
    name: splits-network
    environment: production
